--- a/src/frontend/src/lib/styles/theme/dark-theme.scss
+++ b/src/frontend/src/lib/styles/theme/dark-theme.scss
@@ -47,6 +47,7 @@ html[theme="dark"]:root {
   --color-foreground-page: var(--colors-neutrals-white);
   --color-foreground-primary: var(--colors-neutrals-25);
   --color-foreground-primary-alt: var(--color-brand-500);
+  --color-foreground-tertiary: var(--colors-neutrals-500);
   --color-border-primary: var(--alpha-base-5);
   --color-border-secondary: var(--alpha-base-20);
 
