--- a/src/frontend/src/lib/styles/theme/default-theme.scss
+++ b/src/frontend/src/lib/styles/theme/default-theme.scss
@@ -47,6 +47,7 @@ html[theme="light"]:root {
 	--color-foreground-page: var(--colors-neutrals-black);
 	--color-foreground-primary: var(--colors-neutrals-black);
 	--color-foreground-primary-alt: var(--color-brand-600);
+	--color-foreground-tertiary: var(--colors-neutrals-400);
 	--color-border-primary: var(--alpha-base-5);
 	--color-border-secondary: var(--alpha-base-20);
 
