--- a/src/frontend/src/lib/styles/global/links.scss
+++ b/src/frontend/src/lib/styles/global/links.scss
@@ -10,3 +10,43 @@ a.no-underline {
 a.blue-link {
 	color: var(--color-brand-base);
 }
+
+// NAV ITEMS
+a.nav-item:not([disabled]):not(.disabled):not(.loading) {
+	@apply text-primary;
+
+	&:hover, &.selected {
+		@apply text-brand-primary-alt;
+		@apply bg-brand-subtle-10;
+	}
+
+	&:active {
+		@apply text-brand-primary-alt;
+		@apply bg-brand-subtle-10;
+	}
+
+	&[focus],
+	&:focus {
+		outline-offset: 2px;
+		outline: var(--color-background-brand-primary) solid 2px;
+	}
+
+	&:focus:not(:focus-visible) {
+		outline: none;
+		box-shadow: none;
+	}
+
+	&[active],
+	&:active {
+		&[focus],
+		&:focus {
+			outline: none;
+			box-shadow: none;
+		}
+	}
+}
+
+a.nav-item.disabled:not(.loading), a.nav-item[disabled]:not(.loading) {
+	@apply text-disabled;
+	@apply bg-disabled;
+}
