--- a/src/frontend/src/lib/styles/global/theme.scss
+++ b/src/frontend/src/lib/styles/global/theme.scss
@@ -9,7 +9,7 @@ body {
 	-moz-osx-font-smoothing: grayscale;
 
 	box-sizing: border-box;
-	color: var(--color-brand-text);
+	color: var(--color-foreground-primary);
 }
 article,
 aside,
