--- a/src/frontend/src/lib/styles/theme/default-theme.scss
+++ b/src/frontend/src/lib/styles/theme/default-theme.scss
@@ -1,74 +1,106 @@
 @use 'base-colors' as *;
 
 html[theme="light"]:root {
-	--value-color: $base-black;
-
-	--colors-neutrals-black: #{$base-black};
-	--colors-neutrals-900: #{$gray-iron-900};
-	--colors-neutrals-800: #{$gray-iron-800};
-	--colors-neutrals-700: #{$gray-iron-700};
-	--colors-neutrals-600: #{$gray-iron-600};
-	--colors-neutrals-500: #{$gray-iron-500};
-	--colors-neutrals-400: #{$gray-iron-400};
-	--colors-neutrals-300: #{$gray-iron-300};
-	--colors-neutrals-200: #{$gray-iron-200};
-	--colors-neutrals-100: #{$gray-iron-100};
-	--colors-neutrals-50: #{$gray-iron-50};
-	--colors-neutrals-25: #{$gray-iron-25};
-	--colors-neutrals-white: #{$base-white};
-
-	--alpha-base-100: #{$a-dark-100};
-	--alpha-base-95: #{$a-dark-95};
-	--alpha-base-90: #{$a-dark-90};
-	--alpha-base-80: #{$a-dark-80};
-	--alpha-base-70: #{$a-dark-70};
-	--alpha-base-60: #{$a-dark-60};
-	--alpha-base-50: #{$a-dark-50};
-	--alpha-base-40: #{$a-dark-40};
-	--alpha-base-30: #{$a-dark-30};
-	--alpha-base-20: #{$a-dark-20};
-	--alpha-base-10: #{$a-dark-10};
-	--alpha-base-5: #{$a-dark-5};
-
-	--color-brand-base: #{$oisy-blue-600};
-	--color-brand-100: #{$oisy-blue-100};
-	--color-brand-200: #{$oisy-blue-200};
-	--color-brand-300: #{$oisy-blue-300};
-	--color-brand-400: #{$oisy-blue-400};
-	--color-brand-500: #{$oisy-blue-500};
-	--color-brand-600: #{$oisy-blue-600};
+	--color-foreground-primary: #{$base-black};
+	--color-foreground-primary-inverted: #{$base-white};
+	--color-foreground-secondary: #{$gray-iron-800};
+	--color-foreground-secondary-inverted: #{$gray-iron-100};
+	--color-foreground-tertiary: #{$gray-iron-500};
+	--color-foreground-tertiary-inverted: #{$gray-iron-400};
+	--color-foreground-disabled: #{$a-dark-30};
+	--color-foreground-disabled-alt: #{$a-dark-20};
+	--color-foreground-success-primary: #{$emerald-500};
+	--color-foreground-success-secondary: #{$emerald-600};
+	--color-foreground-success-subtle-30: #{$a-emerald-35};
+	--color-foreground-warning-primary: #{$sunset-500};
+	--color-foreground-warning-secondary: #{$sunset-600};
+	--color-foreground-warning-subtle-30: #{$a-sunset-30};
+	--color-foreground-error-primary: #{$salmon-600};
+	--color-foreground-error-secondary: #{$crimson-600};
+	--color-foreground-error-subtle-30: #{$a-salmon-35};
+	--color-foreground-brand-disabled: #{$a-oisy-blue-30};
+	--color-foreground-brand-primary: #{$oisy-blue-600};
+	--color-foreground-brand-primary-alt: #{$oisy-blue-600};
+	--color-foreground-brand-primary-inverted: #{$oisy-blue-600};
+	--color-foreground-brand-secondary: #{$oisy-blue-800};
+	--color-foreground-brand-subtle-10: #{$a-oisy-blue-10};
+	--color-foreground-brand-subtle-20: #{$a-oisy-blue-20};
+	--color-foreground-brand-subtle-30: #{$a-oisy-blue-30};
+	--color-foreground-brand-tertiary: #{$oisy-blue-950};
+	--color-foreground-primary-inverted-alt: #{$base-white};
+	--color-foreground-white: #{$base-white};
 
 	--color-background-page: #{$oisy-blue-100};
-	--color-background-primary: var(--colors-neutrals-white);
-	--color-background-primary-inverted: var(--colors-neutrals-black);
-	--color-background-secondary: var(--colors-neutrals-50);
-	--color-background-tertiary: var(--colors-neutrals-50);
-	--color-background-surface: var(--colors-neutrals-white);
-	--color-foreground-page: var(--colors-neutrals-black);
-	--color-foreground-primary: var(--colors-neutrals-black);
-	--color-foreground-primary-alt: var(--color-brand-600);
-	--color-foreground-tertiary: var(--colors-neutrals-400);
-	--color-border-primary: var(--alpha-base-5);
-	--color-border-secondary: var(--alpha-base-20);
+	--color-background-surface: #{$base-white};
+	--color-background-modal-overlay: #{$a-dark-60};
+	--color-background-primary: #{$base-white};
+	--color-background-primary-alt: #{$base-white};
+	--color-background-primary-inverted: #{$base-black};
+	--color-background-secondary: #{$gray-iron-50};
+	--color-background-secondary-alt: #{$oisy-blue-200};
+	--color-background-secondary-inverted: #{$gray-iron-800};
+	--color-background-tertiary: #{$gray-iron-100};
+	--color-background-tertiary-alt: #{$oisy-blue-300};
+	--color-background-tertiary-inverted: #{$gray-iron-500};
+	--color-background-disabled: #{$a-dark-5};
+	--color-background-disabled-alt: #{$a-dark-10};
+	--color-background-success-primary: #{$emerald-500};
+	--color-background-success-secondary: #{$emerald-700};
+	--color-background-success-tertiary: #{$emerald-800};
+	--color-background-success-subtle-10: #{$a-emerald-10};
+	--color-background-success-subtle-20: #{$a-emerald-20};
+	--color-background-success-subtle-30: #{$a-emerald-35};
+	--color-background-warning-primary: #{$sunset-500};
+	--color-background-warning-secondary: #{$sunset-700};
+	--color-background-warning-tertiary: #{$sunset-800};
+	--color-background-warning-subtle-10: #{$a-sunset-10};
+	--color-background-warning-subtle-20: #{$a-sunset-20};
+	--color-background-warning-subtle-30: #{$a-sunset-30};
+	--color-background-error-primary: #{$salmon-600};
+	--color-background-error-secondary: #{$crimson-700};
+	--color-background-error-tertiary: #{$crimson-900};
+	--color-background-error-subtle-10: #{$a-crimson-10};
+	--color-background-error-subtle-20: #{$a-crimson-20};
+	--color-background-error-subtle-30: #{$a-crimson-35};
+	--color-background-brand-disabled: #{$a-oisy-blue-10};
+	--color-background-brand-primary: #{$oisy-blue-600};
+	--color-background-brand-primary-alt: #{$oisy-blue-600};
+	--color-background-brand-secondary: #{$oisy-blue-800};
+	--color-background-brand-subtle-10: #{$a-oisy-blue-10};
+	--color-background-brand-subtle-20: #{$a-oisy-blue-20};
+	--color-background-brand-subtle-30: #{$a-oisy-blue-30};
+	--color-background-brand-tertiary: #{$oisy-blue-950};
 
-	--color-warning-lightest: #{$a-sunset-10};
-	--color-warning-lighter: #{$a-sunset-20};
-	--color-warning-light: #{$a-sunset-35};
-	--color-warning-default: #{$sunset-500};
-	--color-warning-dark: #{$sunset-700};
-	--color-warning-darker: #{$sunset-800};
+	--color-border-primary: #{$a-dark-20};
+	--color-border-primary-inverted: #{$gray-iron-800};
+	--color-border-secondary: #{$a-dark-20};
+	--color-border-secondary-inverted: #{$gray-iron-700};
+	--color-border-tertiary: #{$a-dark-10};
+	--color-border-tertiary-inverted: #{$gray-iron-400};
+	--color-border-disabled: #{$a-dark-5};
+	--color-border-success-solid: #{$emerald-500};
+	--color-border-success-solid-alt: #{$emerald-700};
+	--color-border-success-subtle-10: #{$a-emerald-10};
+	--color-border-success-subtle-20: #{$a-emerald-20};
+	--color-border-warning-solid: #{$sunset-500};
+	--color-border-warning-solid-alt: #{$sunset-700};
+	--color-border-warning-subtle-10: #{$a-sunset-10};
+	--color-border-warning-subtle-20: #{$a-sunset-20};
+	--color-border-error-solid: #{$salmon-600};
+	--color-border-error-solid-alt: #{$crimson-700};
+	--color-border-error-subtle-10: #{$a-crimson-10};
+	--color-border-error-subtle-20: #{$a-crimson-20};
+	--color-border-brand-disabled: #{$a-oisy-blue-10};
+	--color-border-brand-primary: #{$oisy-blue-600};
+	--color-border-brand-primary-alt: #{$oisy-blue-600};
+	--color-border-brand-secondary: #{$oisy-blue-800};
+	--color-border-brand-subtle-10: #{$a-oisy-blue-10};
+	--color-border-brand-subtle-20: #{$a-oisy-blue-20};
+	--color-border-brand-subtle-30: #{$a-oisy-blue-30};
+	--color-border-brand-tertiary: #{$oisy-blue-950};
 
-	--color-error-lightest: #{$a-salmon-10};
-	--color-error-lighter: #{$a-salmon-20};
-	--color-error-light: #{$a-salmon-35};
-	--color-error-default: #{$salmon-500};
-	--color-error-dark: #{$salmon-700};
-	--color-error-darker: #{$salmon-800};
+	--color-base-black: #{$base-black};
+	--color-base-white: #{$base-white};
 
-	--color-success-lightest: #{$a-emerald-10};
-	--color-success-lighter: #{$a-emerald-20};
-	--color-success-light: #{$a-emerald-35};
-	--color-success-default: #{$emerald-500};
-	--color-success-dark: #{$emerald-700};
-	--color-success-darker: #{$emerald-800};
+	--backdrop: $a-dark-60;
 }
