--- a/src/frontend/src/lib/styles/global.scss
+++ b/src/frontend/src/lib/styles/global.scss
@@ -1,8 +1,6 @@
-@use 'sass:meta';
+@import "tailwindcss";
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@use 'sass:meta';
 
 @include meta.load-css('global/font-faces');
 @include meta.load-css('global/fonts');
