--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -26,6 +26,7 @@ a.as-button {
 
 	&.primary,
 	&.secondary,
+	&.secondary-light,
 	&.tertiary,
 	&.tertiary-main-card,
 	&.success,
@@ -50,6 +51,7 @@ a.as-button {
 
 	&.primary,
 	&.secondary,
+	&.secondary-light,
 	&.tertiary,
 	&.tertiary-main-card,
 	&.success,
