--- a/src/frontend/src/lib/styles/global/links.scss
+++ b/src/frontend/src/lib/styles/global/links.scss
@@ -12,8 +12,18 @@ a.blue-link {
 }
 
 // NAV ITEMS
-a.nav-item:not([disabled]):not(.disabled):not(.loading) {
+a.nav-item:not([disabled]):not(.disabled):not(.loading), button.nav-item:not([disabled]):not(.disabled):not(.loading) {
 	@apply text-primary;
+	@apply flex;
+	@apply w-full;
+	@apply flex-row;
+	@apply gap-3;
+	@apply rounded-xl;
+	@apply p-3;
+	@apply text-left;
+	@apply no-underline;
+	@apply transition-colors;
+	@apply duration-700;
 
 	&:hover, &.selected {
 		@apply text-brand-primary-alt;
@@ -46,7 +56,8 @@ a.nav-item:not([disabled]):not(.disabled):not(.loading) {
 	}
 }
 
-a.nav-item.disabled:not(.loading), a.nav-item[disabled]:not(.loading) {
+a.nav-item.disabled:not(.loading), a.nav-item[disabled]:not(.loading),
+button.nav-item.disabled:not(.loading), button.nav-item[disabled]:not(.loading){
 	@apply text-disabled;
 	@apply bg-disabled;
 }
