--- a/src/frontend/src/lib/styles/theme/default-theme.scss
+++ b/src/frontend/src/lib/styles/theme/default-theme.scss
@@ -72,7 +72,7 @@ html[theme="light"]:root {
 	--color-background-brand-tertiary: #{$oisy-blue-950};
 
 	--color-border-primary: #{$a-dark-20};
-	--color-border-primary-inverted: #{$gray-iron-800};
+	--color-border-primary-inverted: #{$base-white};
 	--color-border-secondary: #{$a-dark-20};
 	--color-border-secondary-inverted: #{$gray-iron-700};
 	--color-border-tertiary: #{$a-dark-10};
