--- a/src/frontend/src/lib/styles/global/button.scss
+++ b/src/frontend/src/lib/styles/global/button.scss
@@ -289,8 +289,37 @@ a.as-button {
 }
 
 
-// TERTIARY
+// DROPDOWN BUTTON
 .dropdown-button:not(.loading) {
+	@apply text-primary;
+	@apply bg-primary;
+	@apply rounded-xl;
+	@apply px-4;
+	@apply py-3;
+	@apply min-w-72;
+	@apply justify-between;
+	@apply gap-2;
+	@apply text-left;
+	@apply font-medium;
+	@apply leading-5;
+
+	&::placeholder {
+		@apply text-tertiary;
+	}
+
+	&:hover:not(.disabled):not([disabled]), &.opened {
+		@apply bg-primary;
+		@apply border-brand-primary;
+	}
+}
+
+.dropdown-button.disabled:not(.loading), .dropdown-button[disabled]:not(.loading) {
+	@apply text-disabled;
+	@apply bg-disabled;
+}
+
+// DROPDOWN ITEM
+.dropdown-item:not(.loading) {
 	@apply text-primary;
 	@apply rounded-xl;
 	@apply px-3;
@@ -311,6 +340,6 @@ a.as-button {
 	}
 }
 
-.dropdown-button.disabled:not(.loading), .dropdown-button[disabled]:not(.loading) {
+.dropdown-item.disabled:not(.loading), .dropdown-item[disabled]:not(.loading) {
 	@apply text-tertiary-inverted;
 }
