--- a/src/frontend/src/lib/styles/global/links.scss
+++ b/src/frontend/src/lib/styles/global/links.scss
@@ -61,3 +61,8 @@ button.nav-item.disabled:not(.loading), button.nav-item[disabled]:not(.loading){
 	@apply text-disabled;
 	@apply bg-disabled;
 }
+
+.nav-item-condensed {
+	@apply px-3 !important;
+	@apply py-1.5 !important;
+}
