--- a/src/frontend/src/lib/styles/global/gix.scss
+++ b/src/frontend/src/lib/styles/global/gix.scss
@@ -1,10 +1,5 @@
 @use '../mixins/media';
 
-@use "sass:color";
-@function hex2rgb($hex) {
-	@return red($hex), green($hex), blue($hex);
-}
-
 :root {
 	--toggle-disabled-opacity: 1;
 
@@ -155,7 +150,7 @@ div.modal {
 	}
 
 	div.wrapper.dialog > div.container-wrapper {
-		margin: 0;
+		margin: 0 !important;
 
 		& > div.container {
 			border-radius: 0;
